src/app/components/graph/graph.component.scss
.graph {
  width: 100%;
  height: 100%;
}

.tooltip {
  opacity: 0;
  display: flex;
  position: absolute;
  justify-content: center;
  align-items: center;
  padding: 1rem;
  background: #cccccc;
  border: 1px;
  border-color: #242424;
  border-radius: 8px;
  pointer-events: none;
}

.graph-tool-container {
  position: absolute;
  top: 1rem;
  right: 1rem;
  text-align: right;

  .graph-tool {
    margin-bottom: 1rem;
  }

  mat-checkbox {
    margin-right: 1rem;
  }
}

::ng-deep {
  .link {
    stroke: #242424;
    stroke-width: 3px;
    fill: none;
  }

  .link.hidden {
    stroke-width: 0;
  }

  .link.draggable {
    pointer-events: none;
  }

  .arrow {
    fill: #000000;
  }

  .node {
    fill: #bbbbbb;
    stroke: #242424;
  }

  .label {
    pointer-events: none;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }

  .label::selection {
    background: none;
  }
}

